clusters/homelab/apps/sevtech/bluemap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluemap
  namespace: sevtech
spec:
  type: ClusterIP
  selector:
    app: bluemap
  ports:
    - name: http
      port: 8100
      targetPort: 8100
      protocol: TCP
